core(fastbase): [ISSUE-2] Refactorisation du code Controller / Exception / Enum